Adds props to apis
